# Ark_project

./: CMakeLists.txt  config.yaml
include/: color.hpp  http_stream_thread.hpp  packet.hpp  qrcode_scanner.hpp  serial_port.hpp  stream_thread.hpp
src/: http_stream_thread.cpp  logger.cpp  main.cpp  qrcode_scanner.cpp  serial_port.cpp  stream_thread.cpp
